sync language files
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -9,6 +9,7 @@
         "average_price": "Average price",
         "bittrex_scam": "This account is not the real Bittrex account, please send to this account: bittrex-deposit.",
         "bts_market": "Market",
+        "cancel_orders": "Cancel orders",
         "collaterals": "Margin Positions",
         "confirm_asset_modal": {
             "are_you_sure": "Are you sure you want to save all changes to these tabs?",
@@ -68,6 +69,7 @@
         "intro_text_title": "Welcome to %(wallet_name)s",
         "login_with": "Login with",
         "market_actions": "Market actions",
+        "market_orders": "Market orders",
         "market_value": "Market Value",
         "member": {
             "annual": "Annual subscriber",
@@ -114,8 +116,8 @@
             "premium_name_warning": "This is a premium name which is more expensive than a name containing a dash (-) or a number."
         },
         "new_user": "New user?",
-        "no_orders": "No open orders",
         "no_order_history": "No order history",
+        "no_orders": "No open orders",
         "no_price": "--",
         "open_orders": "Open Orders",
         "optional": {
@@ -148,7 +150,6 @@
             "confirm_add": "Add",
             "create_paperwallet": "Create Paper Wallet",
             "create_paperwallet_private_hint": "Unlock/Login before creating the paper wallet to include private keys",
-            "resolve_prediction_disabled_button": "The button will be enabled after resolution date has passed",
             "from": "Imported from account",
             "key": "Key/Name",
             "key_viewer": "Private key viewer",
@@ -169,6 +170,7 @@
             "remove_proxy": "Remove proxy",
             "remove_text": "Remove",
             "reset": "Reset",
+            "resolve_prediction_disabled_button": "The button will be enabled after resolution date has passed",
             "save": "Save Changes",
             "save_all": "Save All Changes",
             "show": "Show",
@@ -192,14 +194,12 @@
         "quote": "Quote",
         "recent": "Recent activity",
         "reset_orders": "Reset",
-        "cancel_orders": "Cancel orders",
         "restore": "Restore",
         "search": "Search for an account",
         "see_open": "See open orders",
         "select_placeholder": "Select Account...",
         "settle": "Settle",
         "settle_orders": "Settle orders",
-        "market_orders": "Market orders",
         "show_hidden": "Hidden",
         "show_ignored": "Show hidden accounts",
         "show_visual": "Visual",
@@ -300,10 +300,10 @@
             "primary": "Primary settings",
             "quote": "Quote asset amount",
             "quote_name": "Quote asset",
-            "reward_percent": "Reward percent",
-            "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "resolve_prediction": "Resolve prediction",
             "resolve_prediction_text": "The asset prediction can be resolved here.",
+            "reward_percent": "Reward percent",
+            "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Short name (max 32 characters)",
             "symbol": "Symbol",
             "to": "Issue to account",
@@ -322,11 +322,11 @@
             "no_balances": "This account has no vesting balances",
             "title": "Vesting balances",
             "type": {
-                "unspecified": "Unspecified",
                 "cashback": "Cashback",
-                "worker": "Worker",
+                "market_fee_sharing": "Market fee sharing",
+                "unspecified": "Unspecified",
                 "witness": "Witness",
-                "market_fee_sharing": "Market fee sharing"
+                "worker": "Worker"
             }
         },
         "votes": {
@@ -466,8 +466,8 @@
         "enable_target_collateral_ratio": "Use Target Collateral Ratio",
         "errors": {
             "below": "Your collateral ratio is below %(mr)s which is not allowed.",
-            "below_mcr_tcr": "Any ratio below %(mr)s will be treated as %(mr)s by chain.",
             "below_info": "Your position is below the required maintenance collateral ratio! Increasing collateral ratio is allowed, debt can only be decreased.",
+            "below_mcr_tcr": "Any ratio below %(mr)s will be treated as %(mr)s by chain.",
             "below_ratio_mcr_update": "Your collateral ratio is blow your original %(ocr)s. Only increased ratio is allowed on margin called orders",
             "close": "Your collateral ratio is close to %(mr)s which means this position is in danger of being margin called if the price drops.",
             "collateral": "Insufficient collateral balance",
@@ -529,21 +529,16 @@
         "buy_sell": "Order Form",
         "buysell_formatter": "{direction} {asset}",
         "call": "Call Price",
-        "cancel_selected_orders": "Cancel selected order(s)",
         "cancel_order_select_all": "Select all orders",
+        "cancel_selected_orders": "Cancel selected order(s)",
         "change": "Change",
         "chart_error": "Chart already exist",
         "chart_height": "Chart height (pixels)",
         "chart_hide": "Hide Charts",
         "chart_load": "Load",
-        "layout_name": "Layout Name",
-        "load_custom_charts": "Load custom charts",
-        "load_chart_layout": "Load Chart Layout",
-        "save_new_chart_layout": "Save New Chart Layout ",
-        "save_custom_charts": "Save custom charts",
         "chart_modal": "Chart options",
-        "chart_type": "Chart type",
         "chart_save": "Save",
+        "chart_type": "Chart type",
         "checking_for_worth_less_settlement": "Checking if you can get a better price by selling to market, please wait..",
         "confirm_buy": "Your order is %(diff)s times higher than the lowest ask, are you sure?",
         "confirm_no_orders_buy": "You are placing a buy order in a market with no open sell orders. Are you certain you wish to proceed?",
@@ -553,8 +548,8 @@
         "custom_quote": "Add a custom quote",
         "deposit": "Deposit",
         "description": "Description",
-        "enter_chart_layout_name": "Enter Chart Layout Name",
         "ema": "Exponential Moving Average",
+        "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "Top Markets",
         "feed_price": "Feed Price",
         "filter": "Filter...",
@@ -570,7 +565,10 @@
         "invalid_price": "Invalid price",
         "invert": "Invert the price",
         "latest": "Latest",
+        "layout_name": "Layout Name",
         "limit": "Limit",
+        "load_chart_layout": "Load Chart Layout",
+        "load_custom_charts": "Load custom charts",
         "lowest_ask": "Lowest ask",
         "maintenance": "Maintenance Call Price",
         "market": "Market",
@@ -641,6 +639,8 @@
         "receive": "Receive",
         "remove": "Remove",
         "rsi": "Relative Strength Index",
+        "save_custom_charts": "Save custom charts",
+        "save_new_chart_layout": "Save New Chart Layout ",
         "scaled": "Scaled",
         "search": "Search for more markets here",
         "sell": "Sell",
@@ -720,16 +720,16 @@
         "settle": "Settlement",
         "settle_better_marketprice": "Market price is in favour",
         "settle_better_settleprice": "Settlement price is in favour",
-        "settlement_date": "Settlement date",
-        "settlement_description": "Settlement of %(quoteAsset)s %(quoteName)s",
-        "settlement_of": "Settlement of",
         "settle_delay": "This asset will settle in %(hours)s hours",
         "settle_delay_globally_settled": "This asset will settle instantly",
         "settle_globally_settled": "Settle instantly",
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "Settle orders",
+        "settlement_date": "Settlement date",
+        "settlement_description": "Settlement of %(quoteAsset)s %(quoteName)s",
         "settlement_hint": "You are attempting to settle {long}. Current price of {market_link}",
+        "settlement_of": "Settlement of",
         "short": "Short",
         "show_all_orders": "Show all %(rowcount)s orders",
         "show_all_trades": "Show all %(rowcount)s trades",
@@ -794,19 +794,19 @@
                 "fund_text": "Anyone can add %(core)s to the fee pool balance using this form:",
                 "pool_balance": "Pool balance",
                 "pool_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s.<br/><br/>The core exchange rate is the price at which %(asset)s are converted to %(core)s.",
+                "select_fee_asset": "Select asset to pay fee",
                 "title": "Fee Pool",
                 "unclaimed_issuer_income": "Unclaimed issuer income",
-                "use_selected_asset": "Use selected asset",
-                "select_fee_asset": "Select asset to pay fee",
-                "use_asset_as_default_fee": "Make selected asset default for paying fees"
+                "use_asset_as_default_fee": "Make selected asset default for paying fees",
+                "use_selected_asset": "Use selected asset"
             },
             "feed_producer": "Feed producer",
             "feed_producer_text": "Approved feed producers may publish a new feed using the form below:",
             "info": "Asset info",
             "invalid": "The asset name %(name)s is invalid",
             "margin_positions": {
-                "empty": "No margin positions",
                 "click_to_switch_to_cumulative": "Click to switch between cumulative and position values",
+                "empty": "No margin positions",
                 "ratio_danger": "Position is below MCR and will be margin called",
                 "ratio_warning": "Position is near MCR and in danger of being margin called",
                 "title": "Margin positions"
@@ -824,8 +824,8 @@
             },
             "prediction_market_asset": {
                 "prediction": "Prediction",
-                "tooltip_prediction": "The prediction is a statement defined by the asset owner. If the statement is true, this prediction market asset should be resolved to a settlement price of 1 by the asset owner.",
                 "resolution_date": "Resolution date",
+                "tooltip_prediction": "The prediction is a statement defined by the asset owner. If the statement is true, this prediction market asset should be resolved to a settlement price of 1 by the asset owner.",
                 "tooltip_resolution_date": "The resolution date is an informal statement when the asset owner intends to resolve this betting market."
             },
             "price_feed": {
@@ -842,8 +842,8 @@
                 "title": "Price Feed"
             },
             "price_feed_data": {
-                "empty": "No valid feed producers",
                 "core_exchange_rate": "CER",
+                "empty": "No valid feed producers",
                 "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
@@ -1360,6 +1360,27 @@
         "mode": "Private/Incognito:",
         "warning": "If you close your browser without backing up your wallet, you will lose this account permanently."
     },
+    "invoice": {
+        "amount": "Amount",
+        "date": "Date",
+        "invalid_format": "Invoice has invalid format",
+        "items": "Items",
+        "memo": "Memo",
+        "note": "Note",
+        "paid_by": "Paid by",
+        "pay_button": "Pay %(asset)s to %(name)s",
+        "pay_invoice": "Pay Invoice",
+        "pay_to": "Pay To",
+        "payment_proof": "Payment proof",
+        "payment_request": "Payment request",
+        "print_receipt": "Print receipt",
+        "receipt_total": "Receipt Total",
+        "recipient_name": "Recipient Name",
+        "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain.",
+        "total": "Total",
+        "transaction": "Transaction",
+        "unit": "Unit"
+    },
     "languages": {
         "de": "Deutsch",
         "en": "English",
@@ -1805,6 +1826,11 @@
         "browser_notifications_additional_transfer_to_me": "Notify about transfers to my account",
         "browser_notifications_allow": "Enable notifications",
         "browser_notifications_disabled_by_browser_notify": "Your browser disabled notifications. Click to learn how enable browser notifications",
+        "can_change_default_fee_asset_tooltip": "The default asset used to pay transaction fees can be changed in the settings",
+        "change": "Change",
+        "change_default": "Change default",
+        "change_default_fee_asset": "Change default fee asset",
+        "change_default_fee_asset_tooltip": "Change the default asset that is used to pay the transaction fee",
         "cloud_login": "Cloud Wallet Login",
         "confirmMarketOrder": "Ask for confirmation of market orders",
         "confirm_no": "Never",
@@ -1820,11 +1846,6 @@
         "faucet_address": "Faucet",
         "faucet_address_text": "The faucet address is used to pay the registration fee for new users.",
         "fee_asset": "Default fee paying asset",
-        "can_change_default_fee_asset_tooltip": "The default asset used to pay transaction fees can be changed in the settings",
-        "change_default_fee_asset": "Change default fee asset",
-        "change_default_fee_asset_tooltip": "Change the default asset that is used to pay the transaction fee",
-        "change_default": "Change default",
-        "change": "Change",
         "general": "General",
         "general_text": "Adjust the basic settings.",
         "global_settings": "Default Global Settings",
@@ -2330,7 +2351,7 @@
     },
     "transfer": {
         "again": "MAKE ANOTHER TRANSFER",
-        "amount": "Quantity",
+        "amount": "Amount",
         "available": "Available",
         "back": "BACK",
         "balances": "Balances",
@@ -2365,7 +2386,6 @@
         "header": "Transfer details",
         "header_subheader": "Send funds from an account you control to another %(wallet_name)s account holder.",
         "header_subheader_propose": "Propose to send funds from one %(wallet_name)s account to another. The BY account is the account proposing the transaction.",
-        "amount": "Amount",
         "memo": "Memo / Message",
         "memo_unlock": "Unlock your wallet/account in order to see this memo",
         "optional": "Optional",
@@ -2374,27 +2394,6 @@
         "send": "Send",
         "total": "Total: ",
         "warn_name_unable_read_memo": "Proposed sender will be unable to read this memo!"
-    },
-    "invoice": {
-        "payment_request": "Payment request",
-        "pay_button": "Pay %(asset)s to %(name)s",
-        "paid_by": "Paid by",
-        "pay_invoice": "Pay Invoice",
-        "pay_to": "Pay To",
-        "items": "Items",
-        "amount": "Amount",
-        "unit": "Unit",
-        "total": "Total",
-        "print_receipt": "Print receipt",
-        "note": "Note",
-        "invalid_format": "Invoice has invalid format",
-        "memo": "Memo",
-        "date": "Date",
-        "transaction": "Transaction",
-        "receipt_total": "Receipt Total",
-        "recipient_name": "Recipient Name",
-        "payment_proof": "Payment proof",
-        "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain."
     },
     "trx_error": {
         "expire": "Your transaction has expired without being confirmed, please try again later."
