--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -9,6 +9,7 @@
         "average_price": "Average price",
         "bittrex_scam": "このアカウントは実際のBittrexアカウントではありません。このアカウントに送信してください: bittrex-deposit",
         "bts_market": "マーケット",
+        "cancel_orders": "Cancel orders",
         "collaterals": "マージンポジション",
         "confirm_asset_modal": {
             "are_you_sure": "Are you sure you want to save all changes to these tabs?",
@@ -68,6 +69,7 @@
         "intro_text_title": "BitShares分散型取引所へようこそ",
         "login_with": "Login with",
         "market_actions": "市場アクション",
+        "market_orders": "Market orders",
         "market_value": "市場価格",
         "member": {
             "annual": "年間会員",
@@ -114,8 +116,8 @@
             "premium_name_warning": "これはダッシュ (-) または数字を含む名前よりも高価なプレミアム名です。"
         },
         "new_user": "はじめてですか？",
-        "no_orders": "未処理の注文はありません",
         "no_order_history": "No order history",
+        "no_orders": "未処理の注文はありません",
         "no_price": "不明な値",
         "open_orders": "注文中",
         "optional": {
@@ -164,9 +166,11 @@
             "private": "秘密キー (WIF - Wallet Import Format)",
             "public": "公開キー",
             "publish": "変更を公開",
+            "publish_prediction": "Publish",
             "remove_proxy": "Remove proxy",
             "remove_text": "削除",
             "reset": "変更をリセット",
+            "resolve_prediction_disabled_button": "The button will be enabled after resolution date has passed",
             "save": "Save Changes",
             "save_all": "Save All Changes",
             "show": "表示",
@@ -195,6 +199,7 @@
         "see_open": "未実行の注文を見る",
         "select_placeholder": "アカウントを選択...",
         "settle": "決済",
+        "settle_orders": "Settle orders",
         "show_hidden": "非表示のアセットを表示する",
         "show_ignored": "非表示のアカウントを表示する",
         "show_visual": "ビジュアル",
@@ -295,6 +300,8 @@
             "primary": "主要設定",
             "quote": "クオートアセット量",
             "quote_name": "クオートアセット",
+            "resolve_prediction": "Resolve prediction",
+            "resolve_prediction_text": "The asset prediction can be resolved here.",
             "reward_percent": "Reward percent",
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "ショートネーム (最大32文字)",
@@ -315,11 +322,11 @@
             "no_balances": "このアカウントには権利確定残高はありません",
             "title": "権利確定残高",
             "type": {
-                "unspecified": "Unspecified",
                 "cashback": "Cashback",
-                "worker": "Worker",
+                "market_fee_sharing": "Market fee sharing",
+                "unspecified": "Unspecified",
                 "witness": "Witness",
-                "market_fee_sharing": "Market fee sharing"
+                "worker": "Worker"
             }
         },
         "votes": {
@@ -460,11 +467,13 @@
         "errors": {
             "below": "あなたの担保比率は%(mr)s未満であり、許可されません。",
             "below_info": "Your position is below the required maintenance collateral ratio! Increasing collateral ratio is allowed, debt can only be decreased.",
+            "below_mcr_tcr": "Any ratio below %(mr)s will be treated as %(mr)s by chain.",
             "below_ratio_mcr_update": "Your collateral ratio is blow your original %(ocr)s. Only increased ratio is allowed on margin called orders",
             "close": "あなたの担保比率は%(mr)sに近いです。そのため、価格が下落した場合、このポジションにマージンコールがかかる危険性があります。",
             "collateral": "担保残高が不足しています",
             "increased_debt_on_margin_call": "You increased your debt, which is not allowed when updating a margin called position"
         },
+        "lockedCR": "Locking Collateral Ratio will override other locked fields",
         "maximize_debt_set_ratio_slider": "You must set a collateral ratio before being able to maximize debt",
         "no_valid": "%(asset_symbol)sの有効なフィードがありません",
         "pay_max_debt": "Pay Max Debt",
@@ -505,6 +514,7 @@
         "top_markets": "トップマーケット"
     },
     "exchange": {
+        "actions": "Actions",
         "add_quote": "Add",
         "asks": "売り注文",
         "atr": "アベレージトゥルーレンジ",
@@ -519,11 +529,15 @@
         "buy_sell": "Order Form",
         "buysell_formatter": "{asset} {direction}",
         "call": "コール価格",
+        "cancel_order_select_all": "Select all orders",
         "cancel_selected_orders": "Cancel selected order(s)",
         "change": "変化",
+        "chart_error": "Chart already exist",
         "chart_height": "Chart height (pixels)",
         "chart_hide": "Hide Charts",
+        "chart_load": "Load",
         "chart_modal": "Chart options",
+        "chart_save": "Save",
         "chart_type": "Chart type",
         "checking_for_worth_less_settlement": "Checking if you can get a better price by selling to market, please wait..",
         "confirm_buy": "あなたの注文は、最低アスク価格より%(diff)s倍高いです。続行してもよろしいですか？",
@@ -535,6 +549,7 @@
         "deposit": "入金",
         "description": "説明",
         "ema": "指数平滑移動平均",
+        "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "トップマーケット",
         "feed_price": "フィード価格",
         "filter": "フィルター",
@@ -550,7 +565,10 @@
         "invalid_price": "価格が不正です",
         "invert": "価格を反転",
         "latest": "最新",
+        "layout_name": "Layout Name",
         "limit": "Limit",
+        "load_chart_layout": "Load Chart Layout",
+        "load_custom_charts": "Load custom charts",
         "lowest_ask": "最低アスク価格",
         "maintenance": "維持コール価格",
         "market": "マーケット",
@@ -569,6 +587,7 @@
             "title": "Market Picker",
             "use": "Use"
         },
+        "modified": "Modified",
         "more": "マーケットを探す",
         "move_down": "Move down",
         "move_up": "Move up",
@@ -620,6 +639,8 @@
         "receive": "取得",
         "remove": "Remove",
         "rsi": "相対力指数",
+        "save_custom_charts": "Save custom charts",
+        "save_new_chart_layout": "Save New Chart Layout ",
         "scaled": "Scaled",
         "search": "他のマーケットを検索する",
         "sell": "売る",
@@ -699,7 +720,10 @@
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "決済注文",
+        "settlement_date": "Settlement date",
+        "settlement_description": "Settlement of %(quoteAsset)s %(quoteName)s",
         "settlement_hint": "You are attempting to settle {long}. Here is a price break down of {market_link}:",
+        "settlement_of": "Settlement of",
         "short": "ショート",
         "show_all_orders": "Show all %(rowcount)s orders",
         "show_all_trades": "Show all %(rowcount)s trades",
@@ -745,6 +769,7 @@
                 "bid": "Bid Price",
                 "collateral": "Additional Collateral",
                 "debt": "Debt Covered",
+                "empty": "No collateral bids",
                 "included": {
                     "no": "No",
                     "partial": "Partially",
@@ -763,8 +788,11 @@
                 "fund_text": "手数料プールは%(asset)sの手数料を%(core)sに換算することによって%(core)sの手数料を支払うために使用されます。手数料プールの資金が尽きた場合、手数料を%(asset)sで払うことはできなくなり、既定値は%(core)sになります。",
                 "pool_balance": "プール残高",
                 "pool_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s.<br/><br/>The core exchange rate is the price at which %(asset)s are converted to %(core)s.",
+                "select_fee_asset": "Select asset to pay fee",
                 "title": "手数料プール",
-                "unclaimed_issuer_income": "未請求の発行者収入"
+                "unclaimed_issuer_income": "未請求の発行者収入",
+                "use_asset_as_default_fee": "Make selected asset default for paying fees",
+                "use_selected_asset": "Use selected asset"
             },
             "feed_producer": "Feed producer",
             "feed_producer_text": "Approved feed producers may publish a new feed using the form below:",
@@ -772,6 +800,7 @@
             "invalid": "アセット名%(name)sは無効です",
             "margin_positions": {
                 "click_to_switch_to_cumulative": "Click to switch between cumulative and position values",
+                "empty": "No margin positions",
                 "ratio_danger": "Position is below MCR and will be margin called",
                 "ratio_warning": "Position is near MCR and in danger of being margin called",
                 "title": "マージンポジション"
@@ -786,6 +815,12 @@
                 "title": "権限",
                 "whitelist_authorities": "ホワイトリスト権限",
                 "whitelist_markets": "ホワイトリストマーケット"
+            },
+            "prediction_market_asset": {
+                "prediction": "Prediction",
+                "resolution_date": "Resolution date",
+                "tooltip_prediction": "The prediction is a statement defined by the asset owner. If the statement is true, this prediction market asset should be resolved to a settlement price of 1 by the asset owner.",
+                "tooltip_resolution_date": "The resolution date is an informal statement when the asset owner intends to resolve this betting market."
             },
             "price_feed": {
                 "external_feed_price": "Feed price (median of witness feeds)",
@@ -802,6 +837,7 @@
             },
             "price_feed_data": {
                 "core_exchange_rate": "CER",
+                "empty": "No valid feed producers",
                 "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
@@ -1318,6 +1354,27 @@
         "mode": "Private/Incognito:",
         "warning": "If you close your browser without backing up your wallet, you will lose this account permanently."
     },
+    "invoice": {
+        "amount": "Amount",
+        "date": "Date",
+        "invalid_format": "Invoice has invalid format",
+        "items": "Items",
+        "memo": "Memo",
+        "note": "Note",
+        "paid_by": "Paid by",
+        "pay_button": "Pay %(asset)s to %(name)s",
+        "pay_invoice": "Pay Invoice",
+        "pay_to": "Pay To",
+        "payment_proof": "Payment proof",
+        "payment_request": "Payment request",
+        "print_receipt": "Print receipt",
+        "receipt_total": "Receipt Total",
+        "recipient_name": "Recipient Name",
+        "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain.",
+        "total": "Total",
+        "transaction": "Transaction",
+        "unit": "Unit"
+    },
     "languages": {
         "de": "Deutsch",
         "en": "English",
@@ -1763,18 +1820,26 @@
         "browser_notifications_additional_transfer_to_me": "マイ・アカウントへの転送について通知する",
         "browser_notifications_allow": "通知を有効にする",
         "browser_notifications_disabled_by_browser_notify": "ブラウザが通知を無効にしました。クリックしてブラウザの通知を有効にする方法を確認する。",
+        "can_change_default_fee_asset_tooltip": "The default asset used to pay transaction fees can be changed in the settings",
+        "change": "Change",
+        "change_default": "Change default",
+        "change_default_fee_asset": "Change default fee asset",
+        "change_default_fee_asset_tooltip": "Change the default asset that is used to pay the transaction fee",
         "cloud_login": "アカウントモデルでログイン",
         "confirmMarketOrder": "マーケットに注文を出す時に確認する",
         "confirm_no": "しない",
         "confirm_remove": "利用可能なノードから%(name)sを削除してもよろしいですか？",
         "confirm_yes": "常時",
         "connection_error": "APIノード%(url)sに接続できません。接続可能のノードに戻ります。",
+        "current_fee_asset": "Current fee asset is: ",
+        "custom": "Custom",
         "darkTheme": "ダークテーマ",
         "delete_select": "削除するウォレットを選択してください",
         "disabled": "Disabled",
         "enable_wallet": "ウォレットモデルを有効にする",
         "faucet_address": "フォーセット",
         "faucet_address_text": "フォーセットアドレスは新規ユーザーの登録手数料の支払いに使用されます。",
+        "fee_asset": "Default fee paying asset",
         "general": "全般",
         "general_text": "基本設定を調整する。",
         "global_settings": "Default Global Settings",
@@ -2088,6 +2153,7 @@
         "nodes_popup": "Click here to open the access settings popup that allows you to switch nodes if necessary",
         "over_limit": "ブリッジにはこの買い注文に必要なアセットが不足しています。",
         "own_account": "You hold keys for this account",
+        "print_receipt": "Click here to create pdf receipt",
         "propose_scam": "この提案は有名な詐欺師によるものです。応じないでください！",
         "propose_tip": "別のユーザーからトランザクションを提案する",
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
@@ -2292,6 +2358,7 @@
         "copy_address": "アドレスをコピー",
         "copy_memo": "メモをコピー",
         "errors": {
+            "asset_unsupported": "Asset %(currency)s is not supported by this blockchain.",
             "balance": "最終残高は0より大きくなければなりません",
             "insufficient": "残高不足",
             "memo_error": "転送メモの解析エラーです。後でやり直してください。",
@@ -2316,11 +2383,10 @@
         "memo": "メモ",
         "memo_unlock": "このメモを見るにはウォレットをアンロックしてください",
         "optional": "オプション",
-        "pay_from": "送信元",
         "phase_out_warning": "We recommend using the new {modal_link} modal as this page will be phased out",
         "see": "自身の転送を見る",
         "send": "送信",
-        "to": "To",
+        "total": "Total: ",
         "warn_name_unable_read_memo": "警告: %(name)sはこのメモを読むことができません。"
     },
     "trx_error": {
