--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -9,6 +9,7 @@
         "average_price": "Average price",
         "bittrex_scam": "Achtung, dies ist ein Betrügerkonto, das echte Bittrex-Konto heißt: bittrex-deposit!",
         "bts_market": "Markt",
+        "cancel_orders": "Cancel orders",
         "collaterals": "Sicherheits-Positionen",
         "confirm_asset_modal": {
             "are_you_sure": "Sind Sie sicher alle Änderungen der Tabs zu speichern?",
@@ -68,6 +69,7 @@
         "intro_text_title": "Willkommen auf BitShares",
         "login_with": "Anmelden mit",
         "market_actions": "Markt Handlungen",
+        "market_orders": "Market orders",
         "market_value": "Marktwert",
         "member": {
             "annual": "Jahresabonent",
@@ -114,8 +116,8 @@
             "premium_name_warning": "Es handelt sich um einen Premiumnamen. Premiumnamen sind teurer. Günstige Namen enthalten mindestens einen Bindestrich, eine Zahl, oder keine Vokale."
         },
         "new_user": "Neuer Benutzer?",
-        "no_orders": "Keine offenen Aufträge",
         "no_order_history": "No order history",
+        "no_orders": "Keine offenen Aufträge",
         "no_price": "--",
         "open_orders": "Offene Aufträge",
         "optional": {
@@ -164,9 +166,11 @@
             "private": "Privater Schlüssel (WIF - Wallet Import Format)",
             "public": "Öffentlicher Schlüssel",
             "publish": "Speichern",
+            "publish_prediction": "Publish",
             "remove_proxy": "Remove proxy",
             "remove_text": "Entfernen",
             "reset": "Zurücksetzen",
+            "resolve_prediction_disabled_button": "The button will be enabled after resolution date has passed",
             "save": "Änderungen speichern",
             "save_all": "Alle Änderungen speichern",
             "show": "Zeige",
@@ -195,6 +199,7 @@
         "see_open": "Betrachte offene Aufträge",
         "select_placeholder": "Konto auswählen...",
         "settle": "Verrechnen",
+        "settle_orders": "Settle orders",
         "show_hidden": "Versteckt",
         "show_ignored": "Zeige versteckte Konten",
         "show_visual": "Sichtbar",
@@ -295,6 +300,8 @@
             "primary": "Primäreinstellungen",
             "quote": "Kursangabe",
             "quote_name": "Kursangabenname",
+            "resolve_prediction": "Resolve prediction",
+            "resolve_prediction_text": "The asset prediction can be resolved here.",
             "reward_percent": "Reward percent",
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Kurzer Name (max 32 Buchstaben)",
@@ -315,11 +322,11 @@
             "no_balances": "Dieses Konto hat kein zugesichertes Guthaben.",
             "title": "Zusicherungen",
             "type": {
-                "unspecified": "Unspecified",
                 "cashback": "Cashback",
-                "worker": "Worker",
+                "market_fee_sharing": "Market fee sharing",
+                "unspecified": "Unspecified",
                 "witness": "Witness",
-                "market_fee_sharing": "Market fee sharing"
+                "worker": "Worker"
             }
         },
         "votes": {
@@ -460,11 +467,13 @@
         "errors": {
             "below": "Sicherheiten-Ratio unter Aufrechterhaltungslevel",
             "below_info": "Ihre Postition ist unterhalb der benötigten Sicherheiten-Ratio! Die Sicherheiten-Ratio kann nur erhöht werden und die Schuld nur verringert werden.",
+            "below_mcr_tcr": "Any ratio below %(mr)s will be treated as %(mr)s by chain.",
             "below_ratio_mcr_update": "Ihre Sicherheiten-Ratio ist unterhalb der orginal %(ocr)s. Nur eine Erhöhung der Ratio ist zulässig.",
             "close": "Ihre Sicherheiten-Ratio ist in der Nähe von %(mr)s, dadurch besteht die Gefahr, dass bei einem Preisverfall Ihre Sicherheiten verkauft werden.",
             "collateral": "Unzureichende Sicherheiten",
             "increased_debt_on_margin_call": "Sie haben Ihre Schuld erhöht, was nicht zulässig auf den Sicherheitenverkauf ist."
         },
+        "lockedCR": "Locking Collateral Ratio will override other locked fields",
         "maximize_debt_set_ratio_slider": "Als erstes muss die Sicherheiten-Ratio festgelegt werden, bevor die Schuld maximiert werden kann.",
         "no_valid": "Kein gültige Preisquelle für %(asset_symbol)s",
         "pay_max_debt": "Bezahle max. Schulden",
@@ -505,6 +514,7 @@
         "top_markets": "Top Märkte"
     },
     "exchange": {
+        "actions": "Actions",
         "add_quote": "Kursangabe hinzufügen",
         "asks": "Briefkurse",
         "atr": "Durchschnittliche echte Bandbreite",
@@ -519,11 +529,15 @@
         "buy_sell": "Kaufen/Verkaufen",
         "buysell_formatter": "{Richtung} {Anlage}",
         "call": "Kaufpreis",
+        "cancel_order_select_all": "Select all orders",
         "cancel_selected_orders": "Cancel selected order(s)",
         "change": "Änderung",
+        "chart_error": "Chart already exist",
         "chart_height": "Chart Höhe (Pixel)",
         "chart_hide": "Chart ausblenden",
+        "chart_load": "Load",
         "chart_modal": "Chart Optionen",
+        "chart_save": "Save",
         "chart_type": "Chart Arten",
         "checking_for_worth_less_settlement": "Prüfe einen kleineren Wert für die Verrechnung",
         "confirm_buy": "Ihr Auftrag ist um das %(diff)s-fache größer als der niedrigste Geldkurs, sind Sie sicher?",
@@ -535,6 +549,7 @@
         "deposit": "Einzahlen",
         "description": "Beschreibung",
         "ema": "Exponentiell gleitender Mittelwert",
+        "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "Top Märkte",
         "feed_price": "Preisangabe",
         "filter": "Suchen ...",
@@ -550,7 +565,10 @@
         "invalid_price": "Ungültiger Preis",
         "invert": "Preis invertieren",
         "latest": "Letzer Preis",
+        "layout_name": "Layout Name",
         "limit": "Limit",
+        "load_chart_layout": "Load Chart Layout",
+        "load_custom_charts": "Load custom charts",
         "lowest_ask": "Günstigster Briefkurs",
         "maintenance": "Benötigter Kaufpreis",
         "market": "Markt",
@@ -569,6 +587,7 @@
             "title": "Marktgreifer",
             "use": "Benutzen"
         },
+        "modified": "Modified",
         "more": "Alle Märkte",
         "move_down": "Nach unten bewegen",
         "move_up": "Nach oben bewegen",
@@ -620,6 +639,8 @@
         "receive": "Empfangen",
         "remove": "Entfernen",
         "rsi": "Relativer Stärke Index",
+        "save_custom_charts": "Save custom charts",
+        "save_new_chart_layout": "Save New Chart Layout ",
         "scaled": "Scaled",
         "search": "Für mehr Märkte hier suchen",
         "sell": "Verkaufen",
@@ -705,7 +726,10 @@
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "Verrechnungs-Auftrag",
+        "settlement_date": "Settlement date",
+        "settlement_description": "Settlement of %(quoteAsset)s %(quoteName)s",
         "settlement_hint": "You are attempting to settle {long}. Current price of {market_link}",
+        "settlement_of": "Settlement of",
         "short": "Short",
         "show_all_orders": "Alle Aufträge zeigen",
         "show_all_trades": "Alle Geschäfte zeigen",
@@ -751,6 +775,7 @@
                 "bid": "Bid Price",
                 "collateral": "Additional Collateral",
                 "debt": "Debt Covered",
+                "empty": "No collateral bids",
                 "included": {
                     "no": "No",
                     "partial": "Partially",
@@ -769,8 +794,11 @@
                 "fund_text": "Der Gebührenspeicher wird dazu genutzt Gebühren in %(core)s, durch einen Umtausch von %(asset)s in %(core)s, zu finanzieren. Sollte der Gebührenpool trocken liegen, können Gebühren nicht länger in %(asset)s, sondern nur noch in %(core)s, bezahlt werden.",
                 "pool_balance": "Poolguthaben",
                 "pool_text": "Der Gebührenspeicher wird dazu genutzt Gebühren in %(core)s, durch einen Umtausch von %(asset)s in %(core)s, zu finanzieren. Sollte der Gebührenpool trocken liegen, können Gebühren nicht länger in %(asset)s, sondern nur noch in %(core)s, bezahlt werden.<br/><br/>Die Kernhandelsrate ist der Preis zu der %(asset)s in %(core)s getauscht werden.",
+                "select_fee_asset": "Select asset to pay fee",
                 "title": "Gebührenpool",
-                "unclaimed_issuer_income": "Nicht ausgezahlte Herausgeberanteile"
+                "unclaimed_issuer_income": "Nicht ausgezahlte Herausgeberanteile",
+                "use_asset_as_default_fee": "Make selected asset default for paying fees",
+                "use_selected_asset": "Use selected asset"
             },
             "feed_producer": "Preiangaben Erzeuger",
             "feed_producer_text": "Genehmigte Preisangaben Erzeuger, können mit diesem Formular neue Quellen hinzufügen:",
@@ -778,6 +806,7 @@
             "invalid": "Der Anlagenname %(name)s ist ungültig",
             "margin_positions": {
                 "click_to_switch_to_cumulative": "Click to switch between cumulative and position values",
+                "empty": "No margin positions",
                 "ratio_danger": "Position is below MCR and will be margin called",
                 "ratio_warning": "Position is near MCR and in danger of being margin called",
                 "title": "Sicherheiten Positionen"
@@ -792,6 +821,12 @@
                 "title": "Befugnisse",
                 "whitelist_authorities": "Authoritäten der Weißliste",
                 "whitelist_markets": "Weißgelistete Märkte"
+            },
+            "prediction_market_asset": {
+                "prediction": "Prediction",
+                "resolution_date": "Resolution date",
+                "tooltip_prediction": "The prediction is a statement defined by the asset owner. If the statement is true, this prediction market asset should be resolved to a settlement price of 1 by the asset owner.",
+                "tooltip_resolution_date": "The resolution date is an informal statement when the asset owner intends to resolve this betting market."
             },
             "price_feed": {
                 "external_feed_price": "Feed price (median of witness feeds)",
@@ -808,6 +843,7 @@
             },
             "price_feed_data": {
                 "core_exchange_rate": "CER",
+                "empty": "No valid feed producers",
                 "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
@@ -1324,6 +1360,27 @@
         "mode": "Privat/Inkognito:",
         "warning": "WARNUNG: Wenn Sie den Browser schließen ohne Ihr Wallet (digitale Brieftasche) vorher zu sichern, verlieren Sie diese Konto un­wi­der­ruf­lich!"
     },
+    "invoice": {
+        "amount": "Amount",
+        "date": "Date",
+        "invalid_format": "Invoice has invalid format",
+        "items": "Items",
+        "memo": "Memo",
+        "note": "Note",
+        "paid_by": "Paid by",
+        "pay_button": "Pay %(asset)s to %(name)s",
+        "pay_invoice": "Pay Invoice",
+        "pay_to": "Pay To",
+        "payment_proof": "Payment proof",
+        "payment_request": "Payment request",
+        "print_receipt": "Print receipt",
+        "receipt_total": "Receipt Total",
+        "recipient_name": "Recipient Name",
+        "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain.",
+        "total": "Total",
+        "transaction": "Transaction",
+        "unit": "Unit"
+    },
     "languages": {
         "de": "Deutsch",
         "en": "English",
@@ -1769,18 +1826,26 @@
         "browser_notifications_additional_transfer_to_me": "Über Überweisungen an mein Konto benachrichtigen.",
         "browser_notifications_allow": "Benachrichtigungen aktivieren",
         "browser_notifications_disabled_by_browser_notify": "Ihr Browser hat Benachrichtigungen deaktiviert. Klicken zur Aktivierung der Browser Benachrichtigung!",
+        "can_change_default_fee_asset_tooltip": "The default asset used to pay transaction fees can be changed in the settings",
+        "change": "Change",
+        "change_default": "Change default",
+        "change_default_fee_asset": "Change default fee asset",
+        "change_default_fee_asset_tooltip": "Change the default asset that is used to pay the transaction fee",
         "cloud_login": "Cloud Wallet (digitale Brieftasche) Anmeldung",
         "confirmMarketOrder": "Nach Bestätigung für Marktanweisungen fragen",
         "confirm_no": "Nie",
         "confirm_remove": "Sind Sie sicher %(name)s von den verfügbaren Verbindungsknoten zu entfernen?",
         "confirm_yes": "Immer",
         "connection_error": "Es ist nicht möglich sich mit dem API Knoten %(url)s zu verbinden, Rückgriff auf bekannte funktionierende Verbindungsknoten.",
+        "current_fee_asset": "Current fee asset is: ",
+        "custom": "Custom",
         "darkTheme": "Dunkel",
         "delete_select": "Auswahl einer lokalen Wallet zur Löschung",
         "disabled": "Disabled",
         "enable_wallet": "Aktiviere lokale Walelt (digitale Brieftasche)",
         "faucet_address": "Aufnahme Addresse",
         "faucet_address_text": "Die Aufnahme Adresse wird benutzt, um die Registrierungsgebühren für neue Benutzer zu bezahlen.",
+        "fee_asset": "Default fee paying asset",
         "general": "Allgemeine",
         "general_text": "Grundeinstellungen anpassen",
         "global_settings": "Default Global Settings",
@@ -2094,6 +2159,7 @@
         "nodes_popup": "Click here to open the access settings popup that allows you to switch nodes if necessary",
         "over_limit": "Die Brücke (Gateway) hat nicht die gewünschte Menge der Anlage, für Ihren Kaufauftrag zur Verfügung.",
         "own_account": "You hold keys for this account",
+        "print_receipt": "Click here to create pdf receipt",
         "propose_scam": "Dieser Vorschlag wurde von einen Betrüger eingereicht, nehmen Sie ihn nicht an!",
         "propose_tip": "Schlagen Sie einen anderen Benutzer für die Ausführung der Transaktion vor!",
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
@@ -2298,6 +2364,7 @@
         "copy_address": "Adresse kopieren",
         "copy_memo": "Notiz kopieren",
         "errors": {
+            "asset_unsupported": "Asset %(currency)s is not supported by this blockchain.",
             "balance": "Ihr abschließendes Guthaben kann nicht negativ sein!",
             "insufficient": "Ungenügendes Guthaben",
             "memo_error": "Eine Transaktionsfehler ist beim Einlesen der Notiz aufgetreten, bitte versuchen Sie es später noch einmal.",
@@ -2322,11 +2389,10 @@
         "memo": "Notiz",
         "memo_unlock": "Entsperren um Notiz zu lesen.",
         "optional": "Optional",
-        "pay_from": "Bezahlen von",
         "phase_out_warning": "We recommend using the new {modal_link} modal as this page will be phased out",
         "see": "ÜBERWEISUNGSÜBERSICHT",
         "send": "Überweisen",
-        "to": "Zu",
+        "total": "Total: ",
         "warn_name_unable_read_memo": "Der vorgeschlagener Absender kann diese Notiz nicht lesen!"
     },
     "trx_error": {
