--- a/app/assets/locales/locale-fr.json
+++ b/app/assets/locales/locale-fr.json
@@ -9,6 +9,7 @@
         "average_price": "Average price",
         "bittrex_scam": "This account is not the real Bittrex account, please send to this account: bittrex-deposit.",
         "bts_market": "Market",
+        "cancel_orders": "Cancel orders",
         "collaterals": "Margin Positions",
         "confirm_asset_modal": {
             "are_you_sure": "Are you sure you want to save all changes to these tabs?",
@@ -68,6 +69,7 @@
         "intro_text_title": "Welcome to BitShares",
         "login_with": "Login with",
         "market_actions": "Market actions",
+        "market_orders": "Market orders",
         "market_value": "Valeur",
         "member": {
             "annual": "Abonné annuel",
@@ -114,8 +116,8 @@
             "premium_name_warning": "This is a premium name which is more expensive than a name containing a dash (-) or a number."
         },
         "new_user": "New user?",
-        "no_orders": "No open orders",
         "no_order_history": "No order history",
+        "no_orders": "No open orders",
         "no_price": "--",
         "open_orders": "Open Orders",
         "optional": {
@@ -164,9 +166,11 @@
             "private": "Private key (WIF - Wallet Import Format)",
             "public": "Public key",
             "publish": "Publier les changements",
+            "publish_prediction": "Publish",
             "remove_proxy": "Remove proxy",
             "remove_text": "Remove",
             "reset": "Annuler les changements",
+            "resolve_prediction_disabled_button": "The button will be enabled after resolution date has passed",
             "save": "Save Changes",
             "save_all": "Save All Changes",
             "show": "Show",
@@ -195,6 +199,7 @@
         "see_open": "See open orders",
         "select_placeholder": "Selectionnez un compte..",
         "settle": "Settle",
+        "settle_orders": "Settle orders",
         "show_hidden": "Hidden",
         "show_ignored": "Show hidden accounts",
         "show_visual": "Visual",
@@ -295,6 +300,8 @@
             "primary": "Primary settings",
             "quote": "Quote asset amount",
             "quote_name": "Quote asset",
+            "resolve_prediction": "Resolve prediction",
+            "resolve_prediction_text": "The asset prediction can be resolved here.",
             "reward_percent": "Reward percent",
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Short name (max 32 characters)",
@@ -315,11 +322,11 @@
             "no_balances": "This account has no vesting balances",
             "title": "Vesting balances",
             "type": {
-                "unspecified": "Unspecified",
                 "cashback": "Cashback",
-                "worker": "Worker",
+                "market_fee_sharing": "Market fee sharing",
+                "unspecified": "Unspecified",
                 "witness": "Witness",
-                "market_fee_sharing": "Market fee sharing"
+                "worker": "Worker"
             }
         },
         "votes": {
@@ -460,11 +467,13 @@
         "errors": {
             "below": "Your collateral ratio is below %(mr)s which is not allowed.",
             "below_info": "Your position is below the required maintenance collateral ratio! Increasing collateral ratio is allowed, debt can only be decreased.",
+            "below_mcr_tcr": "Any ratio below %(mr)s will be treated as %(mr)s by chain.",
             "below_ratio_mcr_update": "Your collateral ratio is blow your original %(ocr)s. Only increased ratio is allowed on margin called orders",
             "close": "Your collateral ratio is close to %(mr)s which means this position is in danger of being margin called if the price drops.",
             "collateral": "Insufficient collateral balance",
             "increased_debt_on_margin_call": "You increased your debt, which is not allowed when updating a margin called position"
         },
+        "lockedCR": "Locking Collateral Ratio will override other locked fields",
         "maximize_debt_set_ratio_slider": "You must set a collateral ratio before being able to maximize debt",
         "no_valid": "No valid feeds for %(asset_symbol)s",
         "pay_max_debt": "Pay Max Debt",
@@ -505,6 +514,7 @@
         "top_markets": "Top Markets"
     },
     "exchange": {
+        "actions": "Actions",
         "add_quote": "Add",
         "asks": "Sell orders",
         "atr": "Average True Range",
@@ -519,11 +529,15 @@
         "buy_sell": "Order Form",
         "buysell_formatter": "{direction} {asset}",
         "call": "Prix de flux",
+        "cancel_order_select_all": "Select all orders",
         "cancel_selected_orders": "Cancel selected order(s)",
         "change": "Change",
+        "chart_error": "Chart already exist",
         "chart_height": "Chart height (pixels)",
         "chart_hide": "Hide Charts",
+        "chart_load": "Load",
         "chart_modal": "Chart options",
+        "chart_save": "Save",
         "chart_type": "Chart type",
         "checking_for_worth_less_settlement": "Checking if you can get a better price by selling to market, please wait..",
         "confirm_buy": "Your order is %(diff)s times higher than the lowest ask, are you sure?",
@@ -535,6 +549,7 @@
         "deposit": "Deposit",
         "description": "Description",
         "ema": "Exponential Moving Average",
+        "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "Top Markets",
         "feed_price": "Feed Price",
         "filter": "Filter...",
@@ -550,7 +565,10 @@
         "invalid_price": "Invalid price",
         "invert": "Invert the price",
         "latest": "Dernier Prix",
+        "layout_name": "Layout Name",
         "limit": "Limit",
+        "load_chart_layout": "Load Chart Layout",
+        "load_custom_charts": "Load custom charts",
         "lowest_ask": "Offre le plus bas",
         "maintenance": "Maintenance Call Price",
         "market": "Market",
@@ -569,6 +587,7 @@
             "title": "Market Picker",
             "use": "Use"
         },
+        "modified": "Modified",
         "more": "Find markets",
         "move_down": "Move down",
         "move_up": "Move up",
@@ -620,6 +639,8 @@
         "receive": "Receive",
         "remove": "Remove",
         "rsi": "Relative Strength Index",
+        "save_custom_charts": "Save custom charts",
+        "save_new_chart_layout": "Save New Chart Layout ",
         "scaled": "Scaled",
         "search": "Search for more markets here",
         "sell": "Vendre",
@@ -699,7 +720,10 @@
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "Settle orders",
+        "settlement_date": "Settlement date",
+        "settlement_description": "Settlement of %(quoteAsset)s %(quoteName)s",
         "settlement_hint": "You are attempting to settle {long}. Here is a price break down of {market_link}:",
+        "settlement_of": "Settlement of",
         "short": "Short",
         "show_all_orders": "Show all %(rowcount)s orders",
         "show_all_trades": "Show all %(rowcount)s trades",
@@ -745,6 +769,7 @@
                 "bid": "Bid Price",
                 "collateral": "Additional Collateral",
                 "debt": "Debt Covered",
+                "empty": "No collateral bids",
                 "included": {
                     "no": "No",
                     "partial": "Partially",
@@ -763,8 +788,11 @@
                 "fund_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s",
                 "pool_balance": "Pool balance",
                 "pool_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s.<br/><br/>The core exchange rate is the price at which %(asset)s are converted to %(core)s.",
+                "select_fee_asset": "Select asset to pay fee",
                 "title": "Fee Pool",
-                "unclaimed_issuer_income": "Unclaimed issuer income"
+                "unclaimed_issuer_income": "Unclaimed issuer income",
+                "use_asset_as_default_fee": "Make selected asset default for paying fees",
+                "use_selected_asset": "Use selected asset"
             },
             "feed_producer": "Feed producer",
             "feed_producer_text": "Approved feed producers may publish a new feed using the form below:",
@@ -772,6 +800,7 @@
             "invalid": "The asset name %(name)s is invalid",
             "margin_positions": {
                 "click_to_switch_to_cumulative": "Click to switch between cumulative and position values",
+                "empty": "No margin positions",
                 "ratio_danger": "Position is below MCR and will be margin called",
                 "ratio_warning": "Position is near MCR and in danger of being margin called",
                 "title": "Margin positions"
@@ -786,6 +815,12 @@
                 "title": "Permissions",
                 "whitelist_authorities": "Whitelist authorities",
                 "whitelist_markets": "Whitelist markets"
+            },
+            "prediction_market_asset": {
+                "prediction": "Prediction",
+                "resolution_date": "Resolution date",
+                "tooltip_prediction": "The prediction is a statement defined by the asset owner. If the statement is true, this prediction market asset should be resolved to a settlement price of 1 by the asset owner.",
+                "tooltip_resolution_date": "The resolution date is an informal statement when the asset owner intends to resolve this betting market."
             },
             "price_feed": {
                 "external_feed_price": "Feed price (median of witness feeds)",
@@ -802,6 +837,7 @@
             },
             "price_feed_data": {
                 "core_exchange_rate": "CER",
+                "empty": "No valid feed producers",
                 "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
@@ -1318,6 +1354,27 @@
         "mode": "Private/Incognito:",
         "warning": "If you close your browser without backing up your wallet, you will lose this account permanently."
     },
+    "invoice": {
+        "amount": "Amount",
+        "date": "Date",
+        "invalid_format": "Invoice has invalid format",
+        "items": "Items",
+        "memo": "Memo",
+        "note": "Note",
+        "paid_by": "Paid by",
+        "pay_button": "Pay %(asset)s to %(name)s",
+        "pay_invoice": "Pay Invoice",
+        "pay_to": "Pay To",
+        "payment_proof": "Payment proof",
+        "payment_request": "Payment request",
+        "print_receipt": "Print receipt",
+        "receipt_total": "Receipt Total",
+        "recipient_name": "Recipient Name",
+        "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain.",
+        "total": "Total",
+        "transaction": "Transaction",
+        "unit": "Unit"
+    },
     "languages": {
         "de": "Deutsch",
         "en": "English",
@@ -1763,18 +1820,26 @@
         "browser_notifications_additional_transfer_to_me": "Notifier les transferts sur mon compte",
         "browser_notifications_allow": "Activer les notifications",
         "browser_notifications_disabled_by_browser_notify": "Your browser disabled notifications. Click to learn how enable browser notifications",
+        "can_change_default_fee_asset_tooltip": "The default asset used to pay transaction fees can be changed in the settings",
+        "change": "Change",
+        "change_default": "Change default",
+        "change_default_fee_asset": "Change default fee asset",
+        "change_default_fee_asset_tooltip": "Change the default asset that is used to pay the transaction fee",
         "cloud_login": "Cloud Wallet Login",
         "confirmMarketOrder": "Demander une confirmation pour des ordres du marché",
         "confirm_no": "Jamais",
         "confirm_remove": "Are you sure you want to remove %(name)s from your available nodes?",
         "confirm_yes": "Toujours",
         "connection_error": "Unable to connect to API node %(url)s, falling back to known working nodes",
+        "current_fee_asset": "Current fee asset is: ",
+        "custom": "Custom",
         "darkTheme": "Dark",
         "delete_select": "Select local wallet to delete",
         "disabled": "Disabled",
         "enable_wallet": "Enable wallet model",
         "faucet_address": "Faucet",
         "faucet_address_text": "The faucet address is used to pay the registration fee for new users.",
+        "fee_asset": "Default fee paying asset",
         "general": "General",
         "general_text": "Adjust the basic settings.",
         "global_settings": "Default Global Settings",
@@ -2088,6 +2153,7 @@
         "nodes_popup": "Click here to open the access settings popup that allows you to switch nodes if necessary",
         "over_limit": "The bridge does not have enough of the desired asset for this buy order",
         "own_account": "You hold keys for this account",
+        "print_receipt": "Click here to create pdf receipt",
         "propose_scam": "This proposal was created by a known scammer or from someone that you blacklisted! Approval not possible.",
         "propose_tip": "Propose another user to initiate a transaction",
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
@@ -2292,6 +2358,7 @@
         "copy_address": "Copy Address",
         "copy_memo": "Copy Memo",
         "errors": {
+            "asset_unsupported": "Asset %(currency)s is not supported by this blockchain.",
             "balance": "Le solde final doit être superieur à 0",
             "insufficient": "Insufficient Balance",
             "memo_error": "The transfer memo parsing error, please try again later.",
@@ -2316,11 +2383,10 @@
         "memo": "Message",
         "memo_unlock": "Unlock your wallet/account in order to see this memo",
         "optional": "Optional",
-        "pay_from": "Pay From",
         "phase_out_warning": "We recommend using the new {modal_link} modal as this page will be phased out",
         "see": "VOIRE MES TRANSFERTS",
         "send": "Envoyer",
-        "to": "À",
+        "total": "Total: ",
         "warn_name_unable_read_memo": "Proposed sender will be unable to read this memo!"
     },
     "trx_error": {
