--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -9,6 +9,7 @@
         "average_price": "Average price",
         "bittrex_scam": "Questo non è il vero account Bittrex, per favore invia al seguente account: bittrex-deposit.",
         "bts_market": "Mercato",
+        "cancel_orders": "Cancel orders",
         "collaterals": "Posizioni con margine",
         "confirm_asset_modal": {
             "are_you_sure": "Are you sure you want to save all changes to these tabs?",
@@ -68,6 +69,7 @@
         "intro_text_title": "Benvenuto su BitShares",
         "login_with": "Login with",
         "market_actions": "Operazioni di mercato",
+        "market_orders": "Market orders",
         "market_value": "Valore di mercato",
         "member": {
             "annual": "Abbonato annuale",
@@ -114,8 +116,8 @@
             "premium_name_warning": "Questo è un nome premium che costa di più di un nome contenente un trattino (-) o un numero."
         },
         "new_user": "Nuovo utente?",
-        "no_orders": "Nessun ordine aperto",
         "no_order_history": "No order history",
+        "no_orders": "Nessun ordine aperto",
         "no_price": "Valore sconosciuto",
         "open_orders": "Ordini aperti",
         "optional": {
@@ -164,9 +166,11 @@
             "private": "Chiave privata (WIF - Wallet Import Format)",
             "public": "Chiave pubblica",
             "publish": "Pubblica modifiche",
+            "publish_prediction": "Publish",
             "remove_proxy": "Remove proxy",
             "remove_text": "Rimuovi",
             "reset": "Azzera modifiche",
+            "resolve_prediction_disabled_button": "The button will be enabled after resolution date has passed",
             "save": "Save Changes",
             "save_all": "Save All Changes",
             "show": "mostra",
@@ -195,6 +199,7 @@
         "see_open": "Mostra ordini aperti",
         "select_placeholder": "Seleziona Account...",
         "settle": "Settle",
+        "settle_orders": "Settle orders",
         "show_hidden": "Nascosti",
         "show_ignored": "Mostra account nascosti",
         "show_visual": "Visual",
@@ -295,6 +300,8 @@
             "primary": "Impostazioni principali",
             "quote": "Quantità asset quotato",
             "quote_name": "Asset quotato",
+            "resolve_prediction": "Resolve prediction",
+            "resolve_prediction_text": "The asset prediction can be resolved here.",
             "reward_percent": "Reward percent",
             "reward_percent_tooltip": "If a market fee is set, the reward percent indicates how much of that market fee is shared through the referral rewards program instead of only benefitting the asset owner.",
             "short": "Nome breve (massimo 32 caratteri)",
@@ -315,11 +322,11 @@
             "no_balances": "Questo account non ha saldi vesting",
             "title": "Saldi vesting",
             "type": {
-                "unspecified": "Unspecified",
                 "cashback": "Cashback",
-                "worker": "Worker",
+                "market_fee_sharing": "Market fee sharing",
+                "unspecified": "Unspecified",
                 "witness": "Witness",
-                "market_fee_sharing": "Market fee sharing"
+                "worker": "Worker"
             }
         },
         "votes": {
@@ -460,11 +467,13 @@
         "errors": {
             "below": "Il tuo collateral ratio è inferiore a %(mr)s, che non è consentito.",
             "below_info": "Your position is below the required maintenance collateral ratio! Increasing collateral ratio is allowed, debt can only be decreased.",
+            "below_mcr_tcr": "Any ratio below %(mr)s will be treated as %(mr)s by chain.",
             "below_ratio_mcr_update": "Your collateral ratio is blow your original %(ocr)s. Only increased ratio is allowed on margin called orders",
             "close": "Il tuo collateral ratio è vicino a %(mr)s che significa che questa posizione rischia di essere chiamata con margine se il prezzo scende.",
             "collateral": "Saldo di garanzia insufficiente",
             "increased_debt_on_margin_call": "You increased your debt, which is not allowed when updating a margin called position"
         },
+        "lockedCR": "Locking Collateral Ratio will override other locked fields",
         "maximize_debt_set_ratio_slider": "You must set a collateral ratio before being able to maximize debt",
         "no_valid": "Nessun feed valido per %(asset_symbol)s",
         "pay_max_debt": "Pay Max Debt",
@@ -505,6 +514,7 @@
         "top_markets": "Top Markets"
     },
     "exchange": {
+        "actions": "Actions",
         "add_quote": "Add",
         "asks": "Ordini di vendita",
         "atr": "Average True Range",
@@ -519,11 +529,15 @@
         "buy_sell": "Order Form",
         "buysell_formatter": "{direction} {asset}",
         "call": "Call Price",
+        "cancel_order_select_all": "Select all orders",
         "cancel_selected_orders": "Cancel selected order(s)",
         "change": "Variazione",
+        "chart_error": "Chart already exist",
         "chart_height": "Chart height (pixels)",
         "chart_hide": "Hide Charts",
+        "chart_load": "Load",
         "chart_modal": "Chart options",
+        "chart_save": "Save",
         "chart_type": "Chart type",
         "checking_for_worth_less_settlement": "Checking if you can get a better price by selling to market, please wait..",
         "confirm_buy": "Il tuo ordine è %(diff)s volte più alto dell'offerta più bassa, sei sicuro?",
@@ -535,6 +549,7 @@
         "deposit": "Deposit",
         "description": "Description",
         "ema": "Exponential Moving Average",
+        "enter_chart_layout_name": "Enter Chart Layout Name",
         "featured": "Mercati top",
         "feed_price": "Feed Price",
         "filter": "Filter...",
@@ -550,7 +565,10 @@
         "invalid_price": "Prezzo non valido",
         "invert": "Inverti il prezzo",
         "latest": "Ultimo prezzo",
+        "layout_name": "Layout Name",
         "limit": "Limit",
+        "load_chart_layout": "Load Chart Layout",
+        "load_custom_charts": "Load custom charts",
         "lowest_ask": "Offerta (ask) più bassa",
         "maintenance": "Prezzo Maintenance Call",
         "market": "Mercato",
@@ -569,6 +587,7 @@
             "title": "Market Picker",
             "use": "Use"
         },
+        "modified": "Modified",
         "more": "Trova mercati",
         "move_down": "Move down",
         "move_up": "Move up",
@@ -620,6 +639,8 @@
         "receive": "Ricevi",
         "remove": "Remove",
         "rsi": "Relative Strength Index",
+        "save_custom_charts": "Save custom charts",
+        "save_new_chart_layout": "Save New Chart Layout ",
         "scaled": "Scaled",
         "search": "Cerca qui altri mercati",
         "sell": "Vendi",
@@ -699,7 +720,10 @@
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "Ordini settle",
+        "settlement_date": "Settlement date",
+        "settlement_description": "Settlement of %(quoteAsset)s %(quoteName)s",
         "settlement_hint": "You are attempting to settle {long}. Here is a price break down of {market_link}:",
+        "settlement_of": "Settlement of",
         "short": "Short",
         "show_all_orders": "Show all %(rowcount)s orders",
         "show_all_trades": "Show all %(rowcount)s trades",
@@ -745,6 +769,7 @@
                 "bid": "Bid Price",
                 "collateral": "Additional Collateral",
                 "debt": "Debt Covered",
+                "empty": "No collateral bids",
                 "included": {
                     "no": "No",
                     "partial": "Partially",
@@ -763,8 +788,11 @@
                 "fund_text": "Il fee pool è usato per pagare le commissioni in %(core)s convertendo automaticamente le commissioni in %(asset)s a %(core)s. Se il fee pool esaurisce i fondi, le commissioni non possono più essere pagate in %(asset)s e saranno di default in %(core)s",
                 "pool_balance": "Saldo del pool",
                 "pool_text": "The fee pool is used to pay fees in %(core)s by converting the fee in %(asset)s to %(core)s. If the fee pool runs out of funds, fees may no longer be paid in %(asset)s and will default to %(core)s.<br/><br/>The core exchange rate is the price at which %(asset)s are converted to %(core)s.",
+                "select_fee_asset": "Select asset to pay fee",
                 "title": "Fee Pool",
-                "unclaimed_issuer_income": "Reddito dell'erogatore non riscosso"
+                "unclaimed_issuer_income": "Reddito dell'erogatore non riscosso",
+                "use_asset_as_default_fee": "Make selected asset default for paying fees",
+                "use_selected_asset": "Use selected asset"
             },
             "feed_producer": "Feed producer",
             "feed_producer_text": "Approved feed producers may publish a new feed using the form below:",
@@ -772,6 +800,7 @@
             "invalid": "Il nome di asset %(name)s non è valido",
             "margin_positions": {
                 "click_to_switch_to_cumulative": "Click to switch between cumulative and position values",
+                "empty": "No margin positions",
                 "ratio_danger": "Position is below MCR and will be margin called",
                 "ratio_warning": "Position is near MCR and in danger of being margin called",
                 "title": "Posizioni con margine"
@@ -786,6 +815,12 @@
                 "title": "Permessi",
                 "whitelist_authorities": "Autorità whitelist",
                 "whitelist_markets": "Mercati in whitelist"
+            },
+            "prediction_market_asset": {
+                "prediction": "Prediction",
+                "resolution_date": "Resolution date",
+                "tooltip_prediction": "The prediction is a statement defined by the asset owner. If the statement is true, this prediction market asset should be resolved to a settlement price of 1 by the asset owner.",
+                "tooltip_resolution_date": "The resolution date is an informal statement when the asset owner intends to resolve this betting market."
             },
             "price_feed": {
                 "external_feed_price": "Feed price (median of witness feeds)",
@@ -802,6 +837,7 @@
             },
             "price_feed_data": {
                 "core_exchange_rate": "CER",
+                "empty": "No valid feed producers",
                 "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
@@ -1318,6 +1354,27 @@
         "mode": "Private/Incognito:",
         "warning": "If you close your browser without backing up your wallet, you will lose this account permanently."
     },
+    "invoice": {
+        "amount": "Amount",
+        "date": "Date",
+        "invalid_format": "Invoice has invalid format",
+        "items": "Items",
+        "memo": "Memo",
+        "note": "Note",
+        "paid_by": "Paid by",
+        "pay_button": "Pay %(asset)s to %(name)s",
+        "pay_invoice": "Pay Invoice",
+        "pay_to": "Pay To",
+        "payment_proof": "Payment proof",
+        "payment_request": "Payment request",
+        "print_receipt": "Print receipt",
+        "receipt_total": "Receipt Total",
+        "recipient_name": "Recipient Name",
+        "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain.",
+        "total": "Total",
+        "transaction": "Transaction",
+        "unit": "Unit"
+    },
     "languages": {
         "de": "Deutsch",
         "en": "English",
@@ -1763,18 +1820,26 @@
         "browser_notifications_additional_transfer_to_me": "Notifica sui trasferimenti al mio account",
         "browser_notifications_allow": "Attivare le notifiche",
         "browser_notifications_disabled_by_browser_notify": "Your browser disabled notifications. Click to learn how enable browser notifications",
+        "can_change_default_fee_asset_tooltip": "The default asset used to pay transaction fees can be changed in the settings",
+        "change": "Change",
+        "change_default": "Change default",
+        "change_default_fee_asset": "Change default fee asset",
+        "change_default_fee_asset_tooltip": "Change the default asset that is used to pay the transaction fee",
         "cloud_login": "Login Portafoglio Cloud",
         "confirmMarketOrder": "Chiedi conferma per gli ordini di mercato",
         "confirm_no": "Mai",
         "confirm_remove": "Sei sicuro di voler rimuovere %(name)s dalla lista dei nodi disponibili?",
         "confirm_yes": "Sempre",
         "connection_error": "Impossibile connettersi con il nodo API node %(url)s; ripiegando su nodi funzionanti noti",
+        "current_fee_asset": "Current fee asset is: ",
+        "custom": "Custom",
         "darkTheme": "Tema scuro",
         "delete_select": "Seleziona portafoglio da rimuovere",
         "disabled": "Disabled",
         "enable_wallet": "Abilità modalità portafoglio",
         "faucet_address": "Faucet",
         "faucet_address_text": "L'indirizzo del faucet è usato per pagare la commissione di registrazione dei nuovi utenti.",
+        "fee_asset": "Default fee paying asset",
         "general": "Generali",
         "general_text": "Modifica le impostazioni di base.",
         "global_settings": "Default Global Settings",
@@ -2088,6 +2153,7 @@
         "nodes_popup": "Click here to open the access settings popup that allows you to switch nodes if necessary",
         "over_limit": "The bridge does not have enough of the desired asset for this buy order",
         "own_account": "You hold keys for this account",
+        "print_receipt": "Click here to create pdf receipt",
         "propose_scam": "Questa proposta è stata creata da un noto ciarlatano, non approvarla!",
         "propose_tip": "Propose another user to initiate a transaction",
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
@@ -2292,6 +2358,7 @@
         "copy_address": "Copy Address",
         "copy_memo": "Copy Memo",
         "errors": {
+            "asset_unsupported": "Asset %(currency)s is not supported by this blockchain.",
             "balance": "Il bilancio finale deve essere maggiore di 0",
             "insufficient": "Fondi insufficienti",
             "memo_error": "The transfer memo parsing error, please try again later.",
@@ -2316,11 +2383,10 @@
         "memo": "Memo / Messaggio",
         "memo_unlock": "Sblocca il tuo portafoglio per visualizzare questo memo",
         "optional": "Opzionale",
-        "pay_from": "Paga da",
         "phase_out_warning": "We recommend using the new {modal_link} modal as this page will be phased out",
         "see": "VEDI I MIEI TRASFERIMENTI",
         "send": "Invia",
-        "to": "A",
+        "total": "Total: ",
         "warn_name_unable_read_memo": "Attenzione: %(name)s non sarà in grado di leggere questo memo"
     },
     "trx_error": {
