--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -45,24 +45,6 @@
             "title": "History Export",
             "use_custom": "Use custom wrapper"
         },
-        "table_columns": {
-            "default": "Customize the Columns",
-            "asset": "Asset",
-            "qty": "QTY",
-            "price": "Price",
-            "hour24": "24HR",
-            "value": "Value",
-            "percent": "Percent",
-            "payments": "Payments",
-            "buy": "Buy",
-            "deposit": "Deposit",
-            "withdraw": "Withdraw",
-            "trade": "Trade",
-            "borrow": "Borrow",
-            "settle": "Settle",
-            "burn": "Burn",
-            "hide": "Show"
-        },
         "filter_orders": "Filter...",
         "follow": "Add contact",
         "group_by_asset": "Group by asset",
@@ -423,6 +405,9 @@
             "whitelist_authorities": "Whitelist authority",
             "whitelist_market_fee_sharing": "Market fee sharing whitelist"
         }
+    },
+    "customizable_table": {
+        "customize_the_columns": "Customize the Columns"
     },
     "account_browsing_mode": {
         "go_back": "Go back to my account",
